--- a/RossShop/View/Base.lproj/LaunchScreen.storyboard
+++ b/RossShop/View/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,18 +15,35 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arkadiusz Łapajski dla" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjv-yu-ZlD">
+                                <rect key="frame" x="122.66666666666667" y="348" width="168.66666666666663" height="20.333333333333314"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="200" verticalHuggingPriority="200" image="iu" translatesAutoresizingMaskIntoConstraints="NO" id="Hui-eP-bSH">
+                                <rect key="frame" x="0.0" y="248" width="414" height="452"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Hui-eP-bSH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="42o-9u-kgU"/>
+                            <constraint firstItem="bjv-yu-ZlD" firstAttribute="top" secondItem="Hui-eP-bSH" secondAttribute="top" constant="100" id="A3j-bp-94W"/>
+                            <constraint firstItem="Hui-eP-bSH" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="DUr-Df-pOq"/>
+                            <constraint firstItem="bjv-yu-ZlD" firstAttribute="centerX" secondItem="Hui-eP-bSH" secondAttribute="centerX" id="K45-us-KAC"/>
+                            <constraint firstAttribute="trailing" secondItem="Hui-eP-bSH" secondAttribute="trailing" id="YBn-x1-cHJ"/>
+                            <constraint firstItem="Hui-eP-bSH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="k1G-eY-Cmv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="iu" width="400" height="400"/>
     </resources>
 </document>
